--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,9 @@
 body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 .w3-quarter img{margin-bottom: -6px; cursor: pointer}
 .w3-quarter img:hover{opacity: 0.6; transition: 0.3s}
+
+p.about1 {
+	padding-left: 50px;
+	padding-right: 50px;
+	font-size: 20px;
+}
