--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,8 +2,13 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 .w3-quarter img{margin-bottom: -6px; cursor: pointer}
 .w3-quarter img:hover{opacity: 0.6; transition: 0.3s}
 
-.about1 {
-	padding-left: 50px;
+p.about1 {
+	padding-left: 70px;
 	padding-right: 50px;
 	font-size: 20px;
+}
+
+h4.about-heading {
+	font-size: 56px;
+	font-style: italic;
 }
