--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,3 +13,18 @@ h4.about-heading {
 	font-style: italic;
 }
 
+h1.project-page-heading {
+	font-size: 60px;
+	font-style: bold;
+}
+
+p.project-page-about {
+	font-size: 20px;
+}
+
+.center {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 50%;
+}
