--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,7 +15,16 @@ h4.about-heading {
 
 h1.project-page-heading {
 	font-size: 60px;
-	font-style: bold;
+	font-style: italic;
+}
+
+h1.project-page-about {
+	text-decoration: underline;
+}
+
+h2.project-page-heading {
+	text-decoration: underline;
+
 }
 
 p.project-page-about {
